Backport TabberNeue 1.7 fixes for tabs going out of bounds (8ab7b83)

--- a/css_reworks/Vector.css
+++ b/css_reworks/Vector.css
@@ -3047,6 +3047,11 @@ fieldset {
 }
 .tabber__header__next:after { right: 0; }
 
+/* 8ab7b83 backport for tabs going out of bounds */
+.tabber__panel {
+	overflow-y: auto;
+	scroll-snap-align: start;
+}
 /* #endregion */
 
 /* Image-specific tweak to get it to display with a height of 75px */
